--- a/app/src/main/res/layout/activity_formulario_avaliacao.xml
+++ b/app/src/main/res/layout/activity_formulario_avaliacao.xml
@@ -127,4 +127,11 @@
         android:text="ENVIAR"
         android:onClick="salvarAvaliaProfessor"/>
 
+    <Button
+        android:id="@+id/btnFormularioListar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="LISTAR"
+        android:onClick="listarAvaliaProfessor"/>
+
 </LinearLayout>
