--- a/app/src/main/res/layout/activity_listagem_avaliacao.xml
+++ b/app/src/main/res/layout/activity_listagem_avaliacao.xml
@@ -10,5 +10,5 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rcvListagemdeAvaliacoes"
         android:layout_width="match_parent"
-        android:layout_height="283dp" />
+        android:layout_height="match_parent" />
 </LinearLayout>
