--- a/app/src/main/res/layout/layout_item_recyclerview.xml
+++ b/app/src/main/res/layout/layout_item_recyclerview.xml
@@ -10,11 +10,22 @@
         android:layout_height="wrap_content"
         android:text="disciplina"
         android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/lblListaProfessor"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="professor"
-        android:textSize="18sp" />
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/lblListaProfessor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="professor"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/btnAdicionar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/imagemexclusao"
+             />
+    </LinearLayout>
 </LinearLayout>
